feat: Create product update route
